syntax = "proto3";


package request;

import "request/type.proto";
import "request/manufacturer.proto";

option java_multiple_files = true; //so it will not create Person as a inner class of PersonOuterClass
option java_package = "request";  // in what package the class will be generated

message CarRequest {

  string model = 1;
  request.Type type = 2;
  request.Manufacturer manufacturer = 3;


}
